Fix login deploy

--- a/values.yaml
+++ b/values.yaml
@@ -54,7 +54,7 @@ connections:
   clearEventsHost: "clear-events"
   doceditorHost: "doceditor"
   backupBackgruondTasksHost: "backup-background-tasks"
-  loginHost: "onlyoffice-login"
+  loginHost: "login"
   appUrlPortal: "http://proxy:8092"
   appCoreBaseDomain: "localhost"
   appCoreMachinekey: "your_core_machinekey"
@@ -70,7 +70,6 @@ images:
   ssoauth: onlyoffice/4testing-docspace-ssoauth
   studioNotify: onlyoffice/4testing-docspace-studio-notify
   studio: onlyoffice/4testing-docspace-studio
-  login: onlyoffice/4testing-docspace-login
   tag: v1.0.0
   pullPolicy: IfNotPresent
 
@@ -160,7 +159,6 @@ containerPorts:
   socket: 9899
   sso: 9834
   backupBackgruondTasks: 5032
-  login: 5011
 
 startupProbe:
   enabled: false
@@ -1435,41 +1433,123 @@ filesServices:
       memory: "2Gi"
       cpu: "2000m"
 
+# DocSpace Login StatefulSet parameters
+#
+login:
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # login.updateStrategy.type Login StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for Login Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Login Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Login Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes Login Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Login container image parameters
+  image:
+    # login.image.repository Login container image repository
+    repository: onlyoffice/4testing-docspace-login
+    # login.image.tag Login container image tag
+    # If set to, it takes priority over the `images.tag`
+    tag: ""
+    # login.image.pullPolicy Login container image pull policy
+    pullPolicy: IfNotPresent
+  # login.containerPorts.app Login container port
+  containerPorts:
+    login: 5011
+  # Probe used for the Login container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `login.startupProbe.enabled=true`
+  startupProbe:
+    # login.startupProbe.enabled Enable startupProbe for Login container
+    enabled: false
+    httpGet:
+      # login.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      # login.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5011
+    # login.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # login.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `login.readinessProbe.enabled=true`
+  readinessProbe:
+    # login.readinessProbe.enabled Enable readinessProbe for Login container
+    enabled: false
+    # login.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # login.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      # login.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5011
+    # login.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # login.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # login.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `login.livenessProbe.enabled=true`
+  livenessProbe:
+    # login.livenessProbe.enabled Enable livenessProbe for Login container
+    enabled: false
+    # login.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # login.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      # login.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5011
+    # login.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # login.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## login.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Login container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # login.resources.requests The requested resources for the Login container
+  # login.resources.limits The resources limits for the Login container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+
 ## App common statefulset parameters
 ## This block defines common parameters for all statefulsets only
 ##
 statefulsetUpdateStrategy:
   type: RollingUpdate
-
-## App Login statefulset parameters
-##
-onlyofficeLogin:
-  startupProbe:
-    enabled: false
-    httpGet:
-      path: /liveness
-      port: 5011
-    failureThreshold: 30
-    periodSeconds: 10
-  readinessProbe:
-    enabled: false
-    failureThreshold: 2
-    httpGet:
-      path: /liveness
-      port: 5011
-    periodSeconds: 10
-    successThreshold: 1
-    timeoutSeconds: 3
-  livenessProbe:
-    enabled: false
-    failureThreshold: 5
-    httpGet:
-      path: /liveness
-      port: 5011
-    periodSeconds: 10
-    successThreshold: 1
-    timeoutSeconds: 3
-    initialDelaySeconds: 45
 
 ## App Socket statefulset parameters
 ##
