--- a/templates/configmaps/app-proxy.yaml
+++ b/templates/configmaps/app-proxy.yaml
@@ -20,4 +20,4 @@ data:
   SERVICE_CLEAR_EVENTS: {{ .Values.connections.clearEventsHost }}:{{ .Values.containerPorts.app }}
   SERVICE_DOCEDITOR: {{ .Values.connections.doceditorHost }}:{{ .Values.doceditor.containerPorts.doceditor }}
   SERVICE_BACKUP_BACKGRUOND_TASKS: {{ .Values.connections.backupBackgruondTasksHost }}:{{ .Values.containerPorts.app }}
-  SERVICE_LOGIN: {{ .Values.connections.loginHost }}:{{ .Values.containerPorts.login }}
+  SERVICE_LOGIN: {{ .Values.connections.loginHost }}:{{ .Values.login.containerPorts.login }}
