--- a/values.yaml
+++ b/values.yaml
@@ -41,9 +41,9 @@ connections:
   nginxSnvsubstTemplateSuffix: ".template"
   apiHost: "api"
   apiSystemHost: "api-system"
-  notifyHost: "onlyoffice-notify"
+  notifyHost: "notify"
   studioNotifyHost: "onlyoffice-studio-notify"
-  socketHost: "onlyoffice-socket"
+  socketHost: "socket"
   peopleServerHost: "people-server"
   filesHost: "onlyoffice-files"
   filesServicesHost: "files-services"
@@ -65,7 +65,6 @@ images:
   initContainer:
     initStorage: onlyoffice/4testing-docspace-bin-share
     waitStorage: onlyoffice/4testing-docspace-wait-bin-share
-  socket: onlyoffice/4testing-docspace-socket
   ssoauth: onlyoffice/4testing-docspace-ssoauth
   studioNotify: onlyoffice/4testing-docspace-studio-notify
   studio: onlyoffice/4testing-docspace-studio
@@ -155,7 +154,6 @@ initContainers:
 
 containerPorts:
   app: 5050
-  socket: 9899
   sso: 9834
   backupBackgruondTasks: 5032
 
@@ -1656,41 +1654,124 @@ notify:
       memory: "2Gi"
       cpu: "2000m"
 
+# DocSpace Socket StatefulSet parameters
+#
+socket:
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # socket.updateStrategy.type Socket StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for Socket Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Socket Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Socket Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes Socket Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Socket container image parameters
+  image:
+    # socket.image.repository Socket container image repository
+    repository: onlyoffice/4testing-docspace-socket
+    # socket.image.tag Socket container image tag
+    # If set to, it takes priority over the `images.tag`
+    tag: ""
+    # socket.image.pullPolicy Socket container image pull policy
+    pullPolicy: IfNotPresent
+  # socket.containerPorts.app Socket container port
+  containerPorts:
+    app: 5050
+    socket: 9899
+  # Probe used for the Socket container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `socket.startupProbe.enabled=true`
+  startupProbe:
+    # socket.startupProbe.enabled Enable startupProbe for Socket container
+    enabled: false
+    httpGet:
+      # socket.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      # socket.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5050
+    # socket.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # socket.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `socket.readinessProbe.enabled=true`
+  readinessProbe:
+    # socket.readinessProbe.enabled Enable readinessProbe for Socket container
+    enabled: false
+    # socket.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # socket.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      # socket.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5050
+    # socket.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # socket.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # socket.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `socket.livenessProbe.enabled=true`
+  livenessProbe:
+    # socket.livenessProbe.enabled Enable livenessProbe for Socket container
+    enabled: false
+    # socket.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # socket.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      # socket.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5050
+    # socket.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # socket.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## socket.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Socket container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # socket.resources.requests The requested resources for the Socket container
+  # socket.resources.limits The resources limits for the Socket container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+
 ## App common statefulset parameters
 ## This block defines common parameters for all statefulsets only
 ##
 statefulsetUpdateStrategy:
   type: RollingUpdate
-
-## App Socket statefulset parameters
-##
-onlyofficeSocket:
-  startupProbe:
-    enabled: false
-    httpGet:
-      path: /liveness
-      port: 5050
-    failureThreshold: 30
-    periodSeconds: 10
-  readinessProbe:
-    enabled: false
-    failureThreshold: 2
-    httpGet:
-      path: /liveness
-      port: 5050
-    periodSeconds: 10
-    successThreshold: 1
-    timeoutSeconds: 3
-  livenessProbe:
-    enabled: false
-    failureThreshold: 5
-    httpGet:
-      path: /liveness
-      port: 5050
-    periodSeconds: 10
-    successThreshold: 1
-    timeoutSeconds: 3
-    initialDelaySeconds: 45
 
 ## App ingress parameters
 ## This block defines parameters for the Nginx ingress only
