--- a/values.yaml
+++ b/values.yaml
@@ -66,7 +66,6 @@ images:
     initStorage: onlyoffice/4testing-docspace-bin-share
     waitStorage: onlyoffice/4testing-docspace-wait-bin-share
   studioNotify: onlyoffice/4testing-docspace-studio-notify
-  studio: onlyoffice/4testing-docspace-studio
   tag: v1.0.0
   pullPolicy: IfNotPresent
 
@@ -1869,6 +1868,118 @@ ssoauth:
   # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
   # ssoauth.resources.requests The requested resources for the ssoauth container
   # ssoauth.resources.limits The resources limits for the ssoauth container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+
+# DocSpace Studio StatefulSet parameters
+#
+studio:
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # studio.updateStrategy.type Studio StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for Studio Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Studio Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Studio Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes Studio Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Studio container image parameters
+  image:
+    # studio.image.repository Studio container image repository
+    repository: onlyoffice/4testing-docspace-studio
+    # studio.image.tag Studio container image tag
+    # If set to, it takes priority over the `images.tag`
+    tag: ""
+    # studio.image.pullPolicy Studio container image pull policy
+    pullPolicy: IfNotPresent
+  # studio.containerPorts.app Studio container port
+  containerPorts:
+    app: 5050
+  # Probe used for the Studio container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `studio.startupProbe.enabled=true`
+  startupProbe:
+    # studio.startupProbe.enabled Enable startupProbe for Studio container
+    enabled: false
+    httpGet:
+      # studio.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      # studio.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5050
+    # studio.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # studio.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `studio.readinessProbe.enabled=true`
+  readinessProbe:
+    # studio.readinessProbe.enabled Enable readinessProbe for Studio container
+    enabled: false
+    # studio.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # studio.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      # studio.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5050
+    # studio.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # studio.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # studio.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `studio.livenessProbe.enabled=true`
+  livenessProbe:
+    # studio.livenessProbe.enabled Enable livenessProbe for Studio container
+    enabled: false
+    # studio.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # studio.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      # studio.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5050
+    # studio.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # studio.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## studio.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Studio container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # studio.resources.requests The requested resources for the Studio container
+  # studio.resources.limits The resources limits for the Studio container
   resources:
     requests:
       memory: "256Mi"
